--- a/init/requirements.txt
+++ b/init/requirements.txt
@@ -15,3 +15,10 @@ tabulate>=0.8.7
 graphviz
 coverage
 docstr-coverage
+dominate>=2.3.1
+visdom>=0.1.8.3
+matplotlib>=3.2.1
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==1.8.0+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.9.0+cpu
