--- a/docker/DockerfileCML
+++ b/docker/DockerfileCML
@@ -1,13 +1,15 @@
 ARG PARENT
 FROM ${PARENT}
 
+# Install PyTorch with CUDA packages
 RUN pip3 install \
     --no-cache-dir \
     --upgrade \
     --upgrade-strategy eager \
     --no-warn-script-location \
-    -r /requirements_machine_learning.txt
+    -r /requirements_pytorch_cuda.txt
 
+# Install CML Bot
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash \
     && apt-get update \
     && apt-get install nodejs -y \
