docker: Merge apt RUN commands

--- a/docker/DockerfileCML
+++ b/docker/DockerfileCML
@@ -10,10 +10,8 @@ RUN pip3 install \
     -r /requirements_pytorch_cuda.txt
 
 # Install CML Bot
-RUN curl -sL https://deb.nodesource.com/setup_12.x | bash \
-    && apt-get update \
-    && apt-get install nodejs -y \
-    && npm i -g @dvcorg/cml
-
-# Reduce image size by removing apt cache
-RUN rm -rf /var/lib/apt/lists/*
+RUN curl -sL https://deb.nodesource.com/setup_12.x | bash && \
+    apt-get update && \
+    apt-get install nodejs -y && \
+    npm i -g @dvcorg/cml && \
+    rm -rf /var/lib/apt/lists/*
