--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,17 +5,18 @@ RUN mkdir -p ${KITCAR_REPO_PATH}
 
 COPY init/* /
 
-# Ensure that ROS packages are up-to-date
-RUN apt update && apt upgrade -y
-
-# Install packages that are necessary for Gazebo to properly work in a Docker container
-RUN apt update && apt install -y \
-dbus dbus-x11 libasound2 libasound2-plugins alsa-utils \
-alsa-oss pulseaudio pulseaudio-utils \
-xvfb
-
-# Install packages from packages file.
-RUN apt update && DEBIAN_FRONTEND=noninteractive xargs --arg-file=/packages_focal.txt apt install -y
+# Install apt packages
+# 1. Update and upgrade the system
+# 2. Install packages necessary for running the simulation in a docker container
+# 3. Install packages from init/packages_focal.txt
+# 4. Remove apt cache
+RUN apt update && \
+    apt upgrade -y && \
+    apt install -y \
+    dbus dbus-x11 libasound2 libasound2-plugins \
+    alsa-utils alsa-oss pulseaudio pulseaudio-utils xvfb && \
+    DEBIAN_FRONTEND=noninteractive xargs --arg-file=/packages_focal.txt apt install -y && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install pip packages
 RUN pip3 install \
@@ -25,9 +26,6 @@ RUN pip3 install \
     --no-warn-script-location \
     -r /requirements.txt \
     -r /requirements_pytorch_cpu.txt
-
-# Reduce image size by removing apt cache
-RUN rm -rf /var/lib/apt/lists/*
 
 # Source ROS within the bashrc
 RUN echo "source /opt/ros/noetic/setup.bash" >> ~/.bashrc
