docker: Add env variables to docker image

--- a/docker/DockerfileROS
+++ b/docker/DockerfileROS
@@ -1,6 +1,13 @@
 ARG PARENT
 FROM ${PARENT}
+
 ARG KITCAR_REPO_PATH=/home/kitcar
+ARG KITCAR_GAZEBO_SIM_PATH=$KITCAR_REPO_PATH/kitcar-gazebo-simulation/simulation
+
+ENV GAZEBO_RESOURCE_PATH $KITCAR_GAZEBO_SIM_PATH/models:$GAZEBO_RESOURCE_PATH
+ENV GAZEBO_MODEL_PATH $KITCAR_GAZEBO_SIM_PATH/models/env_db:$GAZEBO_MODEL_PATH
+ENV ROS_PACKAGE_PATH $ROS_PACKAGE_PATH:$KITCAR_GAZEBO_SIM_PATH/src
+ENV PYTHONPATH $PYTHONPATH:$KITCAR_REPO_PATH/kitcar-gazebo-simulation
 
 # Copy kitcar-gazebo-simulation
 COPY / $KITCAR_REPO_PATH/kitcar-gazebo-simulation
