--- a/simulation/src/gazebo_simulation/package.xml
+++ b/simulation/src/gazebo_simulation/package.xml
@@ -10,10 +10,16 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>genmsgs</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>rostest</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>gazebo</build_depend>
+  <build_depend>genmsg</build_depend>
+  <build_depend>eigen_conversions</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>image_transport</build_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <test_depend>rostest</test_depend>
   <exec_depend>message_runtime</exec_depend>
   <depend>geometry_msgs</depend>
-  <depend>sensor_msgs</depend>
   <depend>gazebo_ros</depend>
   <depend>gazebo-plugins</depend>
   <depend>roscpp</depend>
