--- a/simulation/src/simulation_brain_link/package.xml
+++ b/simulation/src/simulation_brain_link/package.xml
@@ -10,6 +10,11 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>rostest</build_depend>
+  <build_depend>image_transport</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>message_runtime</exec_depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
