--- a/simulation/src/simulation_evaluation/package.xml
+++ b/simulation/src/simulation_evaluation/package.xml
@@ -11,6 +11,10 @@
   <build_depend>message_generation</build_depend>
   <depend>simulation_groundtruth</depend>
   <build_depend>rostest</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
   <exec_depend>message_runtime</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
 </package>
