--- a/simulation/src/simulation_groundtruth/package.xml
+++ b/simulation/src/simulation_groundtruth/package.xml
@@ -9,7 +9,13 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>rostest</build_depend>
   <exec_depend>message_runtime</exec_depend>
+  <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
   <!-- The export tag contains other, unspecified, tags -->
 </package>
