--- a/simulation/src/simulation_onboarding/package.xml
+++ b/simulation/src/simulation_onboarding/package.xml
@@ -10,7 +10,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>genmsgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>rostest</build_depend>
+  <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>message_runtime</exec_depend>
 </package>
