--- a/simulation/src/simulation_rqt/package.xml
+++ b/simulation/src/simulation_rqt/package.xml
@@ -9,6 +9,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>simulation_groundtruth</build_depend>
+  <build_depend>rostest</build_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
