--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -269,7 +269,7 @@ docker-images:
   allow_failure: true
   tags:
   - docker
-  - contabo
+  - server
   services:
   - docker:20.10.5-dind
   variables:
