--- a/simulation/src/simulation_evaluation/CMakeLists.txt
+++ b/simulation/src/simulation_evaluation/CMakeLists.txt
@@ -187,4 +187,5 @@ if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest(launch/test/speaker_node.test)
   add_rostest(launch/test/state_machine_node.test)
+  add_rostest(launch/test/sign_evaluation_node.test)
 endif()
